const mongoose = require('mongoose')
const autopopulate = require('mongoose-autopopulate')

const Jump = require('./jump')
const JumpLog = require('./jump-log')

const athleteSchema = new mongoose.Schema({
  name: {
    type: String,
    unique: true,
    required: true,
  },
  password: {
    type: String,
    required: true,
  },
  email: {
    type: String,
    required: true,
  },
  instructors: [
    {
      type: mongoose.Schema.Types.ObjectId,
      ref: 'Athlete',
    },
  ],
  jumps: [
    {
      type: mongoose.Schema.Types.ObjectId,
      ref: 'Jump',
      autopopulate: true,
    },
  ],
  jumpLogs: [
    {
      type: mongoose.Schema.Types.ObjectId,
      ref: 'JumpLog',
      autopopulate: true,
    },
  ],
  age: Number,
  gender: String,
})
class Athlete {
  async jump(jump) {
    this.jumps.push(jump)
    jump.athletes.push(this)
    await jump.save()
    await this.save()
  }

  async logJump(jump, text) {
    const logJump = await JumpLog.create({
      owner: this,
      jump,
      text,
    })
    this.logJumps.push(logJump)

    await logJump.save()
    await this.save()
  }
}

athleteSchema.loadClass(Athlete)
athleteSchema.plugin(autopopulate)

module.exports = mongoose.model('Athlete', athleteSchema)
